--- a/index.html
+++ b/index.html
@@ -1962,7 +1962,7 @@
                 </td>
             </tr>
         </table><br>
-        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Jessyca Costales">
+        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Jessica Costales">
             <tr>
                 <td style="margin: 0.1px; padding: 0px;">
                     <table cellpadding="0" style="border-collapse: collapse;">
@@ -1976,7 +1976,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 600 16.2px / 20.6px Tahoma, Geneva, sans-serif; color: #432F87;">
-                                            Jessyca Costales</td>
+                                            Jessica Costales</td>
                                     </tr>
                                     <tr>
                                         <td
