--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(124, 124, 124);">
                                             <span style="color: rgb(124, 124, 124); cursor: pointer;">Responsable de
-                                                Conciertos
+                                                Conciertos y Community Manager
                                                 |</span>&nbsp;<span
                                                 style="color: rgb(124, 124, 124); cursor: pointer;">Marketing
                                                 |</span>&nbsp;<span
@@ -1962,7 +1962,7 @@
                 </td>
             </tr>
         </table><br>
-        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Jessica Costales">
+        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Yessica Costales">
             <tr>
                 <td style="margin: 0.1px; padding: 0px;">
                     <table cellpadding="0" style="border-collapse: collapse;">
@@ -1976,7 +1976,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 600 16.2px / 20.6px Tahoma, Geneva, sans-serif; color: #432F87;">
-                                            Jessica Costales</td>
+                                            Yessica Costales</td>
                                     </tr>
                                     <tr>
                                         <td
@@ -2539,7 +2539,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(124, 124, 124);">
-                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Responsable
+                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Encargada
                                                 Audiovisual
                                                 |</span>&nbsp;<span
                                                 style="color: rgb(124, 124, 124); cursor: pointer;">Marketing
