--- a/index.html
+++ b/index.html
@@ -2856,7 +2856,7 @@
                 </td>
             </tr>
         </table><br>
-        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Mitchell Huamán">
+        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Mitchell Huaman">
             <tr>
                 <td style="margin: 0.1px; padding: 0px;">
                     <table cellpadding="0" style="border-collapse: collapse;">
@@ -2870,7 +2870,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 600 16.2px / 20.6px Tahoma, Geneva, sans-serif; color: #432F87;">
-                                            Mitchell Huamán</td>
+                                            Mitchell Huaman</td>
                                     </tr>
                                     <tr>
                                         <td
