--- a/index.html
+++ b/index.html
@@ -2205,7 +2205,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(124, 124, 124);">
-                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Jefe de Logística
+                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Encargado de Logística
                                                 |</span>&nbsp;<span
                                                 style="color: rgb(124, 124, 124); cursor: pointer;">Logística
                                                 |</span>&nbsp;<span
