--- a/index.html
+++ b/index.html
@@ -3411,6 +3411,117 @@
                 </td>
             </tr>
         </table><br>
+        <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Rossio Criollo">
+            <tr>
+                <td style="margin: 0.1px; padding: 0px;">
+                    <table cellpadding="0" style="border-collapse: collapse;">
+                        <tr>
+                            <td valign="top" style="margin: 0.1px; padding: 0px 12px 0px 0px; cursor: pointer;"><img
+                                    src="https://res.cloudinary.com/ditdiedxb/image/upload/v1708632726/Dise%C3%B1o_sin_t%C3%ADtulo_1_shj8qu.png"
+                                    width="140" height="140" style="display: block; min-width: 140px;"></td>
+                            <td valign="top"
+                                style="border-left: 1px solid rgb(96, 51, 137); margin: 0.1px; padding: 0px 0px 0px 12px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
+                                <table cellpadding="0" style="border-collapse: collapse;">
+                                    <tr>
+                                        <td
+                                            style="margin: 0.1px; padding: 0px 0px 8px; font: 600 16.2px / 20.6px Tahoma, Geneva, sans-serif; color: #432F87;">
+                                            Rossio Criollo</td>
+                                    </tr>
+                                    <tr>
+                                        <td
+                                            style="margin: 0.1px; padding: 0px 0px 8px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(124, 124, 124);">
+                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Ejecutiva de ventas
+                                                |</span>&nbsp;<span
+                                                style="color: rgb(124, 124, 124); cursor: pointer;">Ventas
+                                                |</span>&nbsp;<span
+                                                style="color: rgb(124, 124, 124); cursor: pointer;">Vacilandia
+                                                Park</span>
+                                        </td>
+                                    </tr>
+                                    <tr style="cursor: pointer;">
+                                        <td
+                                            style="margin: 0.1px; padding: 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
+                                            <!----><a href="mailto:corporativos@vacilandia.com.pe" target="_blank"
+                                                style="color: #724C9F; text-decoration: none; font-family: Tahoma, Geneva, sans-serif;">Correo: corporativos@vacilandia.com.pe</a>
+                                        </td>
+                                    </tr>
+                                    <tr style="cursor: pointer;">
+                                        <td
+                                            style="margin: 0.1px; padding: 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
+                                            <!----><a href="https://wa.me/+51913480124" target="_blank"
+                                                style="color: #724C9F; text-decoration: none; font-family: Tahoma, Geneva, sans-serif;">Cel:
+                                                +51 913480124</a>
+                                        </td>
+                                    </tr>
+                                    <tr style="cursor: pointer;">
+                                        <td
+                                            style="margin: 0.1px; padding: 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
+                                            <!----><span style="color: rgb(124, 124, 124);">Av. Las Gaviotas con Av. El
+                                                Rosal, Urb. Las Gardenias</span>
+                                        </td>
+                                    </tr>
+                                    <tr style="cursor: pointer;">
+                                        <td
+                                            style="margin: 0.1px; padding: 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
+                                            <!----><a href="https://www.vacilandia.com.pe/" target="_blank"
+                                                style="color: #724C9F; text-decoration: none; font-family: Tahoma, Geneva, sans-serif;">www.vacilandia.com.pe</a>
+                                        </td>
+                                    </tr><!---->
+                                    <tr>
+                                        <td
+                                            style="margin: 0.1px; padding: 12px 0px 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
+                                            <table cellpadding="0" style="border-collapse: collapse;">
+                                                <tr>
+                                                    <td
+                                                        style="margin: 0.1px; padding: 0px 5px 0px 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1); cursor: pointer;">
+                                                        <a href="https://www.facebook.com/vacilandiapark"
+                                                            target="_blank"
+                                                            style="display: block; border-radius: 15%; width: 22px; height: 22px; text-align: center; font-size: 12px; font-family: initial;">
+                                                            <img src="https://res.cloudinary.com/ditdiedxb/image/upload/w_22/f_auto/q_auto/icons/facebook.256x256_pgq3y7.png"
+                                                                alt="" style="position: relative; width: 22px;"></a>
+                                                    </td>
+                                                    <td
+                                                        style="margin: 0.1px; padding: 0px 5px 0px 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1); cursor: pointer;">
+                                                        <a href="https://www.instagram.com/vacilandiapark/?hl=es"
+                                                            target="_blank"
+                                                            style="display: block; border-radius: 15%; width: 22px; height: 22px; text-align: center; font-size: 12px; font-family: initial;">
+                                                            <img src="https://res.cloudinary.com/ditdiedxb/image/upload/w_22/f_auto/q_auto/icons/instagram-icon-512x512-85ckvxzj_w9gxiv.png"
+                                                                alt="" style="position: relative; width: 22px;"></a>
+                                                    </td>
+                                                    <td
+                                                        style="margin: 0.1px; padding: 0px 5px 0px 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1); cursor: pointer;">
+                                                        <a href="https://www.tiktok.com/@vacilandiapark" target="_blank"
+                                                            style="display: block; border-radius: 15%; width: 22px; height: 22px; text-align: center; font-size: 12px; font-family: initial;">
+                                                            <img src="https://res.cloudinary.com/ditdiedxb/image/upload/w_22/f_auto/q_auto/icons/tik-tok.256x256_hygqbp.png"
+                                                                alt="" style="position: relative; width: 22px;"></a>
+                                                    </td>
+                                                    <td
+                                                        style="margin: 0.1px; padding: 0px 5px 0px 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1); cursor: pointer;">
+                                                        <a href="https://www.youtube.com/@vacilandiapark8512/videos"
+                                                            target="_blank"
+                                                            style="display: block; border-radius: 15%; width: 22px; height: 22px; text-align: center; font-size: 12px; font-family: initial;">
+                                                            <img src="https://res.cloudinary.com/ditdiedxb/image/upload/w_22/f_auto/q_auto/icons/youtube-icon-512x512-874lspju_bajizy.png"
+                                                                alt="" style="position: relative; width: 22px;"></a>
+                                                    </td>
+                                                    <td
+                                                        style="margin: 0.1px; padding: 0px 5px 0px 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1); cursor: pointer;">
+                                                        <a href="https://www.linkedin.com/company/vacilandia-park/mycompany/"
+                                                            target="_blank"
+                                                            style="display: block; border-radius: 15%; width: 22px; height: 22px; text-align: center; font-size: 12px; font-family: initial;">
+                                                            <img src="https://res.cloudinary.com/ditdiedxb/image/upload/w_22/f_auto/q_auto/icons/linkedin-original-icon-512x512-myo6evy9_salzj6.png"
+                                                                alt="" style="position: relative; width: 22px;"></a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table><br>
         <table cellpadding="0" width="500" style="border-collapse: collapse; font-size: 12.5px;" id="Xiomara Casas">
             <tr>
                 <td style="margin: 0.1px; padding: 0px;">
