--- a/index.html
+++ b/index.html
@@ -1200,8 +1200,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(124, 124, 124);">
-                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Encargado de
-                                                Gastronomía
+                                            <span style="color: rgb(124, 124, 124); cursor: pointer;">Chef
                                                 |</span>&nbsp;<span
                                                 style="color: rgb(124, 124, 124); cursor: pointer;">Gastronomía
                                                 |</span>&nbsp;<span
@@ -2423,7 +2422,7 @@
                                     <tr>
                                         <td
                                             style="margin: 0.1px; padding: 0px 0px 8px; font: 600 16.2px / 20.6px Tahoma, Geneva, sans-serif; color: #432F87;">
-                                            Sebastián Navarrete</td>
+                                            Sebastián Sánchez Navarrete</td>
                                     </tr>
                                     <tr>
                                         <td
