--- a/index.html
+++ b/index.html
@@ -2104,9 +2104,9 @@
                                     <tr style="cursor: pointer;">
                                         <td
                                             style="margin: 0.1px; padding: 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
-                                            <!----><a href="mailto:jaimes.vacilandia@outlook.com" target="_blank"
+                                            <!----><a href="mailto:jaimes@vacilandia.com.pe" target="_blank"
                                                 style="color: #724C9F; text-decoration: none; font-family: Tahoma, Geneva, sans-serif;">Correo:
-                                                jaimes.vacilandia@outlook.com</a>
+                                                jaimes@vacilandia.com.pe</a>
                                         </td>
                                     </tr>
                                     <tr style="cursor: pointer;">
