--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@
                                                 michaeld@vacilandia.com.pe</a>
                                         </td>
                                     </tr>
+                                    <!---->
                                     <tr style="cursor: pointer;">
                                         <td
                                             style="margin: 0.1px; padding: 0px; font: 12.5px / 15.9px Tahoma, Geneva, sans-serif; color: rgb(0, 0, 1);">
-                                            <!----><a href="https://wa.me/+51977788810" target="_blank"
+                                            <!--<a href="https://wa.me/+51977788810" target="_blank"
                                                 style="color: #724C9F; text-decoration: none; font-family: Tahoma, Geneva, sans-serif;">Cel:
                                                 +51
-                                                977788810</a>
+                                                977788810</a>-->
                                         </td>
                                     </tr>
                                     <tr style="cursor: pointer;">
